# ConditionController

./: .gitignore  CMakeLists.txt  LCD1602Shield.cpp  LCD1602Shield.h  QueryValues.cpp  QueryValues.h  Settings.cpp  commands.txt  controller.cpp
cmake/Platform/: Arduino.cmake
src/: AirConditionController.cpp  AirConditionController.h  CustomQueryValues.cpp  CustomQueryValues.h  DigitQueryValues.cpp  DigitQueryValues.h  DoorController.cpp  DoorController.h  LCD1602Shield.cpp  LCD1602Shield.h  NumberQueryValues.cpp  NumberQueryValues.h  QueryData.cpp  QueryData.h  QueryValues.cpp  QueryValues.h  Settings.cpp  Settings.h  TemperatureController.cpp  TemperatureController.h  controller.cpp  globals.cpp  globals.h  types.h
